-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
None
-
Some future release
| For Gerrit Dashboard: QTBUG-90439 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 330660,2 | Doc: Fix CI warnings qtdeclarative | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 331738,2 | WIP - Doc: Fix qdoc errors qtdeclarative | dev | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
| 332316,2 | Doc: Fix documentation warnings for Qt Quick | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 332411,3 | Doc: Fix CI warnings qtdeclarative | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 332706,3 | Doc: Fix link error to Qt Creator | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 332986,2 | Doc: Add missing \inmodule command | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 334555,2 | Doc: Fix link to Exporting from Design Tools | dev | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |