Doc: Fix documentation warnings for Qt Quick

- Source code for several QML modules has moved, adjust documentation
  configuration accordingly.
- Comment out \instantiates commands referring to internal/undocumented
  classes.

Task-number: QTBUG-90439
Change-Id: I360c8a5c02c5a03b84c77010f399d1a0e36b1263
Reviewed-by: Nico Vertriest <nico.vertriest@qt.io>